# dos-fingerprints

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
nomad_dos_fingerprints/: DOSfingerprint.py  __init__.py  grid.py  plotting.py  similarity.py
tests/: fingerprint_generation_test_data.json  grid_test.json  test_DOSfingerprint.py  test_Grid.py  test_functional.py  test_similarity.py
timing/: profiling_fingerprint_generation.py
